tests/fixtures/invalid/bytes_notin_int.py
# Cannot use 'not in' with Bytes and Int
x: bool = b"a" not in 123
